tests/bad/value_enums/shared_field_missing_match.oc
/// fail: Field `baz` does not exist in enum variant

enum Foo {
    x: i32
    y: i32

    FooA(s: str)
    FooB(ptr: untyped_ptr)
    FooC
}

def main() {
    let a: Foo
    match a {
        FooA(baz) => println("FooA")
        else => {}
    }
}